--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,34 @@
 
   <body>
     <header>
-      
+       <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
+            
+              <li class="nav-item">
+                <%= link_to my_page_path(current_customer), class: 'nav-link text-light' do %>
+                  マイページ
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to item_path, class: 'nav-link text-light' do %>
+                  商品一覧
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to cart_items_path, class: 'nav-link text-light' do %>
+                  カート
+                <% end %>
+              </li>
+              <li class="nav-item">
+                <%= link_to destroy_customer_session_path, class: 'nav-link text-light' do %>
+                  ログアウト
+                <% end %>
+              </li>
+              <% else %>
+              <li class="nav-item">
+                
+              </li>
       
       
     </header>
