--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,38 +11,84 @@
   </head>
 
   <body>
-    <header>
-       <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ml-auto">
-            <% if user_signed_in? %>
-            
-              <li class="nav-item">
-                <%= link_to my_page_path(current_customer), class: 'nav-link text-light' do %>
-                  マイページ
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to item_path, class: 'nav-link text-light' do %>
-                  商品一覧
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to cart_items_path, class: 'nav-link text-light' do %>
-                  カート
-                <% end %>
-              </li>
-              <li class="nav-item">
-                <%= link_to destroy_customer_session_path, class: 'nav-link text-light' do %>
-                  ログアウト
-                <% end %>
-              </li>
-              <% else %>
-              <li class="nav-item">
-                
-              </li>
-      
-      
-    </header>
+     <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <div class="container">
+            <a class="navbar-brand" href="/">
+              <span>nagano_cake</span>
+            </a>
+           <div class="collapse navbar-collapse" id="navbarNavDropdown">
+             
+              <ul class="navbar-nav ml-auto">
+              <% if customer_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to my_page_path, class: 'nav-link text-light' do %>
+                    マイページ
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to items_path, class: 'nav-link text-light' do %>
+                    商品一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to cart_items_path, class: 'nav-link text-light' do %>
+                    カート
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to destroy_customer_session_path, class: 'nav-link text-light' do %>
+                    ログアウト
+                  <% end %>
+                </li>
+              <% elsif admin_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to admin_items_path, class: 'nav-link text-light' do %>
+                    商品一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to admin_customers_path, class: 'nav-link text-light' do %>
+                    会員一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to admin_customer_path, class: 'nav-link text-light' do %>
+                    注文履歴一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to destroy_admin_session_path, class: 'nav-link text-light' do %>
+                    サインアウト
+                  <% end %>
+                </li>
+                <% else %>
+                <li class="nav-item">
+                  <%= link_to about_path, class: 'nav-link text-light' do %>
+                    About
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to items_path, class: 'nav-link text-light' do %>
+                    商品一覧
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_customer_registration_path, class: 'nav-link text-light' do %>
+                    新規登録
+                  <% end %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to new_customer_session_path, class: 'nav-link text-light' do %>
+                    ログイン
+                  <% end %>
+                </li>
+              <% end %>
+              </ul>
+          </div>
+         </div>
+        </nav>
+      </header>
     <main>
     <%= yield %>
     </main>
