--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -4,12 +4,47 @@
   <%= render "public/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= f.label :名前 %><br>
+    <%= f.text_field :last_name, autofocus:true, autocomplete: "last_name" %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :名 %><br>
+    <%= f.text_field :first_name %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :セイ %><br>
+    <%= f.text_field :last_name_kana %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :メイ %><br>
+    <%= f.text_field :first_name_kana %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :メールアドレス %><br>
+    <%= f.email_field :email %>
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label :郵便番号（ハイフンなし） %>
+    <%= f.text_field :postal_code %>
+  </div>
+  
+  <div class="field">
+    <%= f.label :住所 %>
+    <%= f.text_field :address %>
+  </div>
+
+  <div class="field">
+    <%= f.label :電話番号 %>
+    <%= f.text_field :telephone_number %>
+  </div>
+
+  <div class="field">
+    <%= f.label :パスワード %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
