--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,6 +1,9 @@
-    <div class="col-md-8 offset-md-1">
-      <h2>商品一覧</h2>
-      <table class="table table-hover table-inveres">
+<div class="container px-5 px-sm-0">
+  <h2>商品一覧</h2>
+  <div class="text-right">
+  <button type="button" class="btn btn-secondary" onclick="location.href='/admin/items/new'">+</button>
+   </div>
+    <table class="table table-hover table-inveres">
         <thead>
         <tr>
           <th>商品ID</th>
@@ -10,9 +13,19 @@
         </tr>
         </thead>
         <tbody>
-
+      <% @items.each do |item| %>
+        <tr>
+          <td>
+            <%= item.id %>
+          </td>
+          <td>
+            <%= link_to item.name,item_path(item.id) %>
+          </td>
+          <td>
+            <%= item.price %>
+          </td>
+        </tr> 
+      <% end %>
         </tbody>
-      </table>
-     </div>
-  </div>
+    </table>
 </div>
