--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -2,9 +2,9 @@
  <div class="container px-5 px-sm-0">
   <div class="row">
    <h3>商品新規登録</h3>
-  </div><br>
-   <div class="btn-wrapper col-10 mx-auto">
-   <%= form_with model: @item do |f| %>
+  </div>
+   <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+   <%= form_with model: @item, url: admin_items_path do |f| %>
    <div class="form-group">
     <label for="itme_image">商品画像</label>
       <%= f.file_field :image, accept: "image/*", class: "w-100" %>
