--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,19 +1,36 @@
+<p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-    <div class="col-md-8 offset-md-1">
-      <h2>Book detail</h2>
-      <table class="table">
-        <tbody>
-          <tr>
-            <td>
-              <%= image_tag @item %><br>
-              <%= @item.name %>
-              <%= @item.introduction %>
-              <%= @item.price %>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <h2>商品説明</h2>
+  </div>
+   <div class="container">
+    <div class="row">
+       <div class="col">
+         <%= image_tag @item.get_image(300,300) %>
+        </div>
+        <div class="col d-flex align-items-center">
+        <table>
+         <tr>
+           <th >商品名</th>
+           <td><%= @item.name %></td>
+         </tr><br>
+         <tr>
+           <th style="padding-right: 2em">商品説明</th>
+           <td><%= @item.introduction %></td>
+         </tr><br>
+         <tr>
+           <th>税込価格<br>
+              (税抜価格)</th>
+           <td><%= (@item.price * 1.1).floor %>(<%= @item.price %>)</td>
+         </tr>
+         <tr>
+          <th colspan="3"></th>
+         </tr>
+         </table>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center">
+     <%= link_to "編集する", edit_admin_item_path, class: 'btn btn-sm btn-success' %>
     </div>
   </div>
 </div>
