--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -25,11 +25,7 @@
          </tr>
      </table>
   </div>
-  <div class="field">
-     <table></table>
- 
 
-  
   <div class="field">
     <%= f.label :メールアドレス %><br>
     <%= f.email_field :email %>
@@ -64,7 +60,7 @@
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "新規登録" %>
   </div>
 <% end %>
 
