--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -18,7 +18,10 @@
             <%= customer.id %>
           </td>
           <td>
-            <%= link_to customer.last_name+customer.first_name,admin_customer_path(customer.id) %>
+            <%= link_to admin_customer_path(customer.id) do %>
+            <%= customer.last_name %>
+            <%= customer.first_name %>
+            <% end %>
           </td>
           <td>
             <%= customer.email %>
