--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,8 +1,56 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-  <h2><%= @customer.name %>さんの会員詳細</h2>
+  <h2><%= @customer.full_name %>さんの会員詳細</h2>
   </div>
    <div class="container">
     <div class="row">
-       <div class="col">
+       <div class="col d-flex align-items-center">
+        <table>
+         <tr>
+           <th>会員ID</th>
+           <td><%= @customer.id %></td>
+         </tr><br>
+         <tr>
+           <th style="padding-right: 2em">氏名</th>
+           <td>
+            <%= @customer.full_name %>
+           </td>
+         </tr><br>
+         <tr>
+           <th>フリガナ</th>
+           <td>
+           <%= @customer.full_name_kana %>
+           </td>
+         </tr>
+         <tr>
+           <th>郵便番号</th>
+           <td><%= @customer.postal_code %></td>
+         </tr>
+         <tr>
+          <th>住所</th>
+          <td><%= @customer.address %></td>
+         </tr>
+         <tr>
+          <th>電話番号</th>
+          <td><%= @customer.telephone_number %></td>
+         </tr>
+         <tr>
+          <th>メールアドレス</th>
+          <td><%= @customer.email %></td>
+         </tr>
+         <tr>
+          <th>会員ステータス</th>
+          <td></td>
+         </tr>
+         <tr>
+          <th colspan="3"></th>
+         </tr>
+         </table>
+        </div>
+    </div>
+    <div class="d-flex justify-content-center">
+     <%= link_to "編集する", edit_admin_item_path, class: 'btn btn-sm btn-success' %>
+    </div>
+  </div>
+</div>
