--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
                 <% end %>
               </li>
               <li class="nav-item">
-                <%= link_to destroy_customer_session_path, class: 'nav-link text-light' do %>
+                <%= link_to destroy_customer_session_path, method: :delete, class: 'nav-link text-light' do %>
                   ログアウト
                 <% end %>
               </li>
