--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,8 +1,10 @@
-<h2>新規会員登録</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<p id="notice"></p>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+  <h3>新規会員登録</h3><br>
+  </div>
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "public/shared/error_messages", resource: resource %>
-
   <div class="field">
      <table>
          <tr>
@@ -25,43 +27,67 @@
          </tr>
      </table>
   </div>
-
   <div class="field">
-    <%= f.label :メールアドレス %><br>
-    <%= f.email_field :email %>
+    <table>
+     <tr>
+       <th style="padding-right: 3em">メールアドレス</th>
+       <td><%= f.email_field :email %></td>
+     </tr>
+    </table>
   </div>
-
   <div class="field">
-    <%= f.label :郵便番号（ハイフンなし） %>
-    <%= f.text_field :postal_code %>
+    <table>
+     <tr>
+       <th>郵便番号(ハイフンなし)</th>
+       <td><%= f.text_field :postal_code %></td>
+     </tr>
+    </table>
+  </div>
+  <div class="field">
+    <table>
+     <tr>
+       <th style="padding-right: 3em">住所</th>
+       <td><%= f.text_field :address %></td>
+     </tr>
+    </table>
+  </div>
+  <div class="field">
+    <table>
+     <tr>
+       <th>電話番号(ハイフンなし)</th>
+       <td><%= f.text_field :telephone_number %></td>
+     </tr>
+    </table>
+  </div>
+  <div class="field">
+    <table>
+     <tr>
+       <th>パスワード(６文字以上)</th>
+       <td> 
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+        </td>
+     </tr>
+    </table>
+  </div>
+  <div class="field">
+    <table>
+     <tr>
+       <th>パスワード(確認用)</th>
+       <td><%= f.password_field :password_confirmation, autocomplete: "new-password" %></td>
+     </tr>
+    </table>
+  </div>
+</div>
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+  <div class="actions">
+    <%= f.submit "新規登録", class: "btn btn-sm btn-success" %>
+    <% end %>
+  </div><br>
   </div>
   
-  <div class="field">
-    <%= f.label :住所 %>
-    <%= f.text_field :address %>
-  </div>
-
-  <div class="field">
-    <%= f.label :電話番号 %>
-    <%= f.text_field :telephone_number %>
-  </div>
-
-  <div class="field">
-    <%= f.label :パスワード %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
-
-<%= render "public/shared/links" %>
+  <h3>既に登録済みの方</h3>
+  <p> こちらからログインしてください</p>
+    <%= render "public/shared/links" %>
