--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -41,7 +41,7 @@
          </tr>
          <tr>
           <th>会員ステータス</th>
-          <td></td>
+          <td><%= @customer.is_deleted %></td>
          </tr>
          <tr>
           <th colspan="3"></th>
