--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -21,10 +21,10 @@
     <label for="item_price">税抜価格</label>
       <%= f.number_field :price %>
    </div>
-    <div class="d-grid gap-2 d-md-block">
-    <%= f.submit "編集を保存", class: "btn btn-success btn-default btn-sm" %>
-   <% end %>
-    </div>
    </div>
-  </div>
- </div>
+   <div class="section1 text-center">
+    <%= f.submit "編集を保存", class: "btn btn-success btn-default btn-sm" %>
+    <% end %>
+   </div>
+   </div>
+ 
