--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -1,45 +1,43 @@
 <p id="notice"></p>
-<div class="container px-5 px-sm-0">
-  <div class="row">
-  <h2><%= @customer.full_name %>さんの会員情報編集</h2>
-  </div>
-   <div class="container">
-    <div class="row">
+  <div class="container px-5 px-sm-0">
+   <div class="row">
+   <h2><%= @customer.full_name %>さんの会員情報編集</h2>
+   </div>
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <%= form_with model: @customer, url: admin_customer_path do |f| %> 
      <div class="form-group">
-     <label for="customer_id">会員ID</label>
-      <%= @customer.id %>
+       <label for="customer_id">会員ID</label>
+       <%= @customer.id %>
      </div>
      <div class="form-group">
-     <label for="customer_full_name">氏名</label>
-      <%= f.text_field :last_name %><%= f.text_field :first_name %>
+       <label for="customer_full_name">氏名</label>
+       <%= f.text_field :last_name %><%= f.text_field :first_name %>
      </div>
-     <!--     <div class="form-group">-->
-     <!--<label for="customer_id">会員ID</label>-->
-     <!-- <%#= f.text_field :id %>-->
-     <!--</div>-->
-     <!--     <div class="form-group">-->
-     <!--<label for="customer_id">会員ID</label>-->
-     <!-- <%#= f.text_field :id %>-->
-     <!--</div>-->
-     <!--     <div class="form-group">-->
-     <!--<label for="customer_id">会員ID</label>-->
-     <!-- <%#= f.text_field :id %>-->
-     <!--</div>-->
-     <!--     <div class="form-group">-->
-     <!--<label for="customer_id">会員ID</label>-->
-     <!-- <%#= f.text_field :id %>-->
-     <!--</div>-->
-     <!--     <div class="form-group">-->
-     <!--<label for="customer_id">会員ID</label>-->
-     <!-- <%#= f.text_field :id %>-->
-     <!--</div>-->
-     <!--     <div class="form-group">-->
-     <!--<label for="customer_id">会員ID</label>-->
-     <!-- <%#= f.text_field :id %>-->
-     <!--</div>-->
+     <div class="form-group">
+       <label for="customer_full_name_kana">フリガナ</label>
+       <%= f.text_field :last_name_kana %><%= f.text_field :first_name_kana %>
+     </div>
+     <div class="form-group">
+       <label for="customer_postal_code">郵便番号</label>
+       <%= f.text_field :postal_code %>
+     </div>
+     <div class="form-group">
+       <label for="customer_address">住所</label>
+       <%= f.text_field :address %>
+     </div>
+     <div class="form-group">
+       <label for="customer_telephone_number">電話番号</label>
+       <%= f.text_field :telephone_number %>
+     </div>
+     <div class="form-group">
+       <label for="customer_email">メールアドレス</label>
+       <%= f.email_field :email %>
+     </div>
+     <div class="form-group">
+       <label for="customer_is_deleted">会員ステータス</label>
+       <%= @customer.is_deleted %>
+     </div>
      <% end %>
-    </div>
-   </div>
-</div>
+  </div>
+  </div>
           
