--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,59 +1,55 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-  <h2><%= @customer.full_name %>さんの会員詳細</h2>
+  <h3><%= @customer.full_name %>さんの会員詳細</h3>
   </div>
-   <div class="container">
-    <div class="row">
-       <div class="col d-flex align-items-center">
-        <table>
-         <tr>
-           <th>会員ID</th>
-           <td><%= @customer.id %></td>
-         </tr><br>
-         <tr>
-           <th style="padding-right: 2em">氏名</th>
-           <td>
-            <%= @customer.full_name %>
-           </td>
-         </tr><br>
-         <tr>
-           <th>フリガナ</th>
-           <td>
-           <%= @customer.full_name_kana %>
-           </td>
-         </tr>
-         <tr>
-           <th>郵便番号</th>
-           <td><%= @customer.postal_code %></td>
-         </tr>
-         <tr>
-          <th>住所</th>
-          <td><%= @customer.address %></td>
-         </tr>
-         <tr>
-          <th>電話番号</th>
-          <td><%= @customer.telephone_number %></td>
-         </tr>
-         <tr>
-          <th>メールアドレス</th>
-          <td><%= @customer.email %></td>
-         </tr>
-         <tr>
-          <th>会員ステータス</th>
-          <td><%= @customer.is_deleted %></td>
-         </tr>
-         <tr>
-          <th colspan="3"></th>
-         </tr>
-         </table>
-        </div>
+  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+     <table>
+       <tr>
+         <th>会員ID</th>
+         <td><%= @customer.id %></td>
+       </tr><br>
+         <th>氏名</th>
+          <td>
+          <%= @customer.full_name %>
+          </td>
+       </tr>
+       <tr>
+         <th>フリガナ</th>
+         <td>
+         <%= @customer.full_name_kana %>
+         </td>
+       </tr>
+       <tr>
+         <th>郵便番号</th>
+         <td><%= @customer.postal_code %></td>
+       </tr>
+       <tr>
+         <th>住所</th>
+         <td><%= @customer.address %></td>
+       </tr>
+       <tr>
+         <th>電話番号</th>
+         <td><%= @customer.telephone_number %></td>
+       </tr>
+       <tr>
+         <th style="padding-right: 3em">メールアドレス</th>
+         <td><%= @customer.email %></td>
+       </tr>
+       <tr>
+         <th>会員ステータス</th>
+         <td><%= @customer.is_deleted %></td>
+       </tr>
+       <tr>
+         <th colspan="3"></th>
+       </tr>
+     </table>
     </div>
     <div class="d-flex justify-content-center">
      <table>
       <tr>
        <th><%= link_to "編集する", edit_admin_customer_path, class: 'btn btn-sm btn-success' %></th><br>
-       <th><%= link_to "注文履歴一覧を見る", admin_items_path, class: 'btn btn-sm btn-success' %></th>
+       <th><%= link_to "注文履歴一覧を見る", admin_items_path, class: 'btn btn-sm btn-primary' %></th>
       </tr>
      </table>
     </div>
