--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
    <h3>商品新規編集</h3>
   </div>
-   <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+   <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
    <%= form_with model: @item, url: admin_item_path do |f| %> 
    <div class="form-group">
     <label for="itme_image">商品画像</label>
