--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -38,11 +38,11 @@
        </tr>
        <tr>
          <th>会員ステータス</th>
-         <td><%= @customer.is_deleted %></td>
+         <td><%= @customer.is_deleted %>
+              <% if customer_is_deleted? %>
+         </td>
        </tr>
-       <tr>
-         <th colspan="3"></th>
-       </tr>
+       
      </table>
     </div>
     <div class="d-flex justify-content-center">
