--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -1,9 +1,8 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
-  <div class="row">
   <h3><%= @customer.full_name %>さんの会員詳細</h3>
-  </div>
-  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+  <div class="row">
+   <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
      <table>
        <tr>
          <th>会員ID</th>
@@ -39,12 +38,7 @@
        <tr>
          <th>会員ステータス</th>
          <td>
-          <% if customer_signed_in? %>
           <%= @customer.is_deleted %>
-          "false"
-          <% else %>
-          <%= @customer.is_deleted %>
-          <% end %>
          </td>
        </tr>
       </table>
@@ -54,5 +48,6 @@
        <th><%= link_to "注文履歴一覧を見る", admin_items_path, class: 'btn btn-sm btn-primary' %></th>
        </tr>
      </table>
+   </div>
   </div>
  </div>
