--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"></p>
  <div class="container px-5 px-sm-0">
   <div class="row">
-   <h3>商品新規編集</h3>
+   <h3>商品編集</h3>
   </div>
    <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
    <%= form_with model: @item, url: admin_item_path do |f| %> 
