--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,75 +1,73 @@
-<p id="notice"></p>
 <div class="container px-5 px-sm-0">
   <div class="row">
-  <h3>新規会員登録</h3><br>
-  </div>
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "public/shared/error_messages", resource: resource %>
-  <div class="field">
-    <table>
-     <tr>
-       <th>名前</th>
-       <th style="padding-right: 3em">(姓)<%= f.text_field :last_name, autofocus:true, autocomplete: "last_name" %></th>
-       <th>(名)<%= f.text_field :first_name %></th>
-       <th></th>
-     </tr>
-  </div>
-  <div class="field">
-     <tr>
-       <th>フリガナ</th>
-       <th>(セイ)<%= f.text_field :last_name_kana %></th>
-       <th>(メイ)<%= f.text_field :first_name_kana %></tH>
-     </tr>
-  </div>
-  <div class="field">
-     <tr>
-       <th style="padding-right: 3em">メールアドレス</th>
-       <th><%= f.email_field :email %></th>
-       <th></th>
-  </div>
-  <div class="field">
-     <tr>
-       <th>郵便番号(ハイフンなし)</th>
-       <th><%= f.text_field :postal_code %></th>
-     </tr>
-  </div>
-  <div class="field">
-     <tr>
-       <th style="padding-right: 3em">住所</th>
-       <th><%= f.text_field :address %></th>
-     </tr>
-  </div>
-  <div class="field">
-     <tr>
-       <th style="padding-right: 5em">電話番号(ハイフンなし)</th>
-       <th><%= f.text_field :telephone_number %></th>
-     </tr>
-  </div>
-  <div class="field">
-     <tr>
-       <th>パスワード(６文字以上)</th>
-       <th> 
+    <div class="col-md-8 col-lg-5 px-5 px-sm-0">
+    <h3>新規会員登録</h3>
+     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+     <%= render "public/shared/error_messages", resource: resource %>
+      <div class="field">
+        <table>
+         <tr>
+         <th>名前</th>
+         <th>(姓)<%= f.text_field :last_name, autofocus:true, autocomplete: "last_name" %></th>
+         <th>(名)<%= f.text_field :first_name %></th>
+         </tr>
+      </div>
+      <div class="field">
+         <tr>
+         <th>フリガナ</th>
+         <th>(セイ)<%= f.text_field :last_name_kana %></th>
+         <th>(メイ)<%= f.text_field :first_name_kana %></tH>
+         </tr>
+        </table>
+      </div>
+      <div class="field">
+         <%= f.label :メールアドレス %>
+         <%= f.email_field :email %>
+      </div>
+      <div class="field">
+         <th>郵便番号(ハイフンなし)</th>
+         <th><%= f.text_field :postal_code %></th>
+         </tr>
+       </div>
+       <div class="field">
+         <tr>
+         <th style="padding-right: 3em">住所</th>
+         <th><%= f.text_area :address, class: "form-control", style: "width:40%" %></th>
+         </tr>
+       </div>
+       <div class="field">
+         <tr>
+         <th style="padding-right: 5em">電話番号(ハイフンなし)</th>
+         <th><%= f.text_field :telephone_number %></th>
+         </tr>
+       </div>
+       <div class="field">
+         <tr>
+         <th>パスワード(６文字以上)</th> 
+         <th> 
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
         <%= f.password_field :password, autocomplete: "new-password" %>
         </th>
-     </tr>
-  </div>
-  <div class="field">
-     <tr>
-       <th>パスワード(確認用)</th>
-       <th><%= f.password_field :password_confirmation, autocomplete: "new-password" %></th>
-     </tr>
-    </table>
-  </div>
-</div><br>
-  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-  <div class="actions">
+        </tr>
+        </div>
+        <div class="field">
+        <tr>
+        <th>パスワード(確認用)</th>
+        <th><%= f.password_field :password_confirmation, autocomplete: "new-password" %></th>
+        </tr>
+        </div>
+      <br>
+ 
     <%= f.submit "新規登録", class: "btn btn-sm btn-success" %>
     <% end %>
-  </div><br>
+    </div>
+   </div>
+  <div class="col-md-8 col-lg-5 px-5 px-sm-0">
+     <div class="actions">
+     <h3>既に登録済みの方</h3>
+        <p> <%= link_to "こちら", new_session_path(resource_name) %>からログインしてください</p>
+     </div>
   </div>
-  
-  <h3>既に登録済みの方</h3>
-  <p> <%= link_to "こちら", new_session_path(resource_name) %>からログインしてください</p>
+</div>  
