--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -45,7 +45,7 @@
       <table>
        <tr>
        <th><%= link_to "編集する", edit_admin_customer_path, class: 'btn btn-sm btn-success' %></th><br>
-       <th><%= link_to "注文履歴一覧を見る", admin_items_path, class: 'btn btn-sm btn-primary' %></th>
+       <th><%= link_to "注文履歴一覧を見る", admin_path, class: 'btn btn-sm btn-primary' %></th>
        </tr>
      </table>
    </div>
