--- a/app/assets/stylesheets/public/homes.scss
+++ b/app/assets/stylesheets/public/homes.scss
@@ -1,3 +1,10 @@
 // Place all the styles related to the public/homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.main-container {
+  background-image: image-url('happy-mothers-day-g109f70fd3_1920.jpg');
+  width: 600px;
+  height: 400px;
+  background-size: cover;
+  background-color: red;
+}
