--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -3,7 +3,7 @@
    <div class="row">
    <h2><%= @customer.full_name %>さんの会員情報編集</h2>
    </div>
-  <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+  <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <%= form_with model: @customer, url: admin_customer_path do |f| %> 
      <div class="form-group">
        <label for="customer_id">会員ID</label>
