--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     
-    <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
@@ -53,7 +53,7 @@
                 <% end %>
               </li>
               <li class="nav-item">
-                 <%= link_to admin_customers_path, class: 'nav-link text-light' do %>
+                 <%= link_to admin_path, class: 'nav-link text-light' do %>
                    注文履歴一覧
                 <% end %>
               </li>
