--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,10 +1,10 @@
-<div class="main-container">
-    
-<p>ようこそ、ながのCAKEへ！</p><br>
-<p>このサイトは、ケーキ販売のECサイトになります。</p><br>
-<p>会員でない方も商品の閲覧はできますが、</p><br>
-<p>購入には会員登録が必要になります。</p><br>
-</div>
+<div class="container px-5 px-sm-0">
+  <div class="main-container">
+<p>ようこそ、ながのCAKEへ！<br>
+   このサイトは、ケーキ販売のECサイトになります<br>
+   会員でない方も商品の閲覧はできますが、<br>
+   購入には会員登録が必要になります。</p><br>
+ </div>
 <h2>新着商品</h2>
    <div class="row">
     <% @items.each do |item| %>
@@ -14,4 +14,8 @@
       ￥<%= (item.price * 1.1).floor %><br>
     </div>
     <% end %>
-   </div>
+  </div>
+  <div class="text-right">
+  <%= link_to "全ての商品を見る＞", items_path %>
+  </div>
+</div>
