--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -3,41 +3,46 @@
    <div class="row">
    <h2><%= @customer.full_name %>さんの会員情報編集</h2>
    </div>
-  <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <div class="col-md-8 col-md-offset-2">
     <%= form_with model: @customer, url: admin_customer_path do |f| %> 
      <div class="form-group">
-       <label for="customer_id">会員ID</label>
+       <label for="customer_id"></label>
        <%= @customer.id %>
-     </div>
-     <div class="form-group">
-       <label for="customer_full_name">氏名</label>
-       <%= f.text_field :last_name %><%= f.text_field :first_name %>
-     </div>
-     <div class="form-group">
-       <label for="customer_full_name_kana">フリガナ</label>
-       <%= f.text_field :last_name_kana %><%= f.text_field :first_name_kana %>
-     </div>
-     <div class="form-group">
-       <label for="customer_postal_code">郵便番号</label>
-       <%= f.text_field :postal_code %>
-     </div>
-     <div class="form-group">
-       <label for="customer_address">住所</label>
-       <%= f.text_field :address %>
-     </div>
-     <div class="form-group">
-       <label for="customer_telephone_number">電話番号</label>
-       <%= f.text_field :telephone_number %>
-     </div>
-     <div class="form-group">
-       <label for="customer_email">メールアドレス</label>
-       <%= f.email_field :email %>
-     </div>
-     <div class="form-group">
-       <label for="customer_is_deleted">会員ステータス</label>
-       <%= @customer.is_deleted %>
-     </div>
+       <table>
+         <tr>
+          <th>氏名</th> 
+          <th><%= f.text_field :last_name %></th>
+          <th><%= f.text_field :first_name %></th>
+         </tr>
+         <tr>
+          <th>フリガナ</th>
+        　<th> <%= f.text_field :last_name_kana %></th>
+        　<th> <%= f.text_field :first_name_kana %></th>
+        </tr>
+        <tr>
+          <th>郵便番号</th>
+          <th><%= f.text_field :postal_code %></th>
+        </tr>
+        <tr>
+          <th>住所</th>
+          <th><%= f.text_field :address %></th>
+        </tr>
+        <tr>
+          <th>電話番号</th>
+          <th><%= f.text_field :telephone_number %></th>
+        </tr>
+        <tr>
+          <th>メールアドレス</th>
+          <th><%= f.email_field :email %></th>
+        </tr>
+        <tr>
+          <th>会員ステータス</th>
+          <th><%= @customer.is_deleted %></th>
+        </tr>
+       </table>
+       <div class="text-center"><%= link_to "編集する", admin_customers_path, class: 'btn btn-sm btn-success' %></div>
+       </div>
      <% end %>
-  </div>
+  　</div>
   </div>
           
