--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,12 @@
-home　aboutページ
+<div class="container px-5 px-sm-0">
+  <div class="text-center">
+    <h1>About</h1>
+    <p1>ながのCAKEは全国発送可能なケーキ屋さんです。<br>
+        お子様からお年寄りの方までお召し上がりいただけるよう、<br>
+        様々なバリエーションをご用意しております。<br>
+        また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+        ぜひご注文ください</p1><br>
+        
+    <img src="/nagano/app/assets/images/sachertorte-g14acbbdf6_1920.jpg" width="100" >
+  </div>
+</div>
