--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -5,8 +5,8 @@
         お子様からお年寄りの方までお召し上がりいただけるよう、<br>
         様々なバリエーションをご用意しております。<br>
         また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
-        ぜひご注文ください</p1><br>
-        
-    <img src="/nagano/app/assets/images/sachertorte-g14acbbdf6_1920.jpg" width="100" >
+        ぜひご注文ください
+    </p1><br>
+    <%= image_tag '/nagano/app/assets/images/sachertorte-g14acbbdf6_1920.jpg' %>
   </div>
 </div>
