--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -7,8 +7,12 @@
     <%= form_with model: @customer, url: admin_customer_path do |f| %> 
      <div class="form-group">
        <label for="customer_id"></label>
-       <%= @customer.id %>
        <table>
+         <tr>
+          <th>会員ID</th>
+          <th><%= @customer.id %></th>
+          <th></th>
+        </tr>
          <tr>
           <th>氏名</th> 
           <th><%= f.text_field :last_name %></th>
@@ -22,25 +26,30 @@
         <tr>
           <th>郵便番号</th>
           <th><%= f.text_field :postal_code %></th>
+          <th></th>
         </tr>
         <tr>
           <th>住所</th>
           <th><%= f.text_field :address %></th>
+          <th></th>
         </tr>
         <tr>
           <th>電話番号</th>
           <th><%= f.text_field :telephone_number %></th>
+          <th></th>
         </tr>
         <tr>
           <th>メールアドレス</th>
           <th><%= f.email_field :email %></th>
+          <th></th>
         </tr>
         <tr>
           <th>会員ステータス</th>
-          <th><%= @customer.is_deleted %></th>
+          <th><%= f.select :.is_deleted., %></th>
+          <th></th>
         </tr>
        </table>
-       <div class="text-center"><%= link_to "編集する", admin_customers_path, class: 'btn btn-sm btn-success' %></div>
+       <div class="text-center"><%= link_to "変更を保存", admin_customers_path, class: 'btn btn-sm btn-success' %></div>
        </div>
      <% end %>
   　</div>
