--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -7,6 +7,6 @@
         また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
         ぜひご注文ください
     </p1><br>
-    <%= image_tag '/nagano/app/assets/images/sachertorte-g14acbbdf6_1920.jpg' %>
+    <%= image_tag 'sachertorte-g14acbbdf6_1920.jpg', :size =>'320x320' %>
   </div>
 </div>
