--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,1 +1,43 @@
-マイページ
+<p id="notice"></p>
+<div class="container px-5 px-sm-0">
+    <h3>マイページ</h3>
+    <table>
+     <tr>
+       <th>登録情報</th>
+       <th> <%= link_to "編集する", costomers_edit_path, class: 'btn btn-sm btn-success' %></th>
+     </tr>
+    </table>
+    <div class="row">
+     <div class="col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+     <table>
+         <th>氏名</th>
+          <td>
+          <%= @customer.full_name %>
+          </td>
+       </tr>
+       <tr>
+         <th>フリガナ</th>
+         <td>
+         <%= @customer.full_name_kana %>
+         </td>
+       </tr>
+       <tr>
+         <th>郵便番号</th>
+         <td><%= @customer.postal_code %></td>
+       </tr>
+       <tr>
+         <th>住所</th>
+         <td><%= @customer.address %></td>
+       </tr>
+       <tr>
+         <th>電話番号</th>
+         <td><%= @customer.telephone_number %></td>
+       </tr>
+       <tr>
+         <th style="padding-right: 3em">メールアドレス</th>
+         <td><%= @customer.email %></td>
+       </tr>
+     </table>
+     </div>
+    </div>
+</div>
