--- a/app/views/admin/customers/edit.html.erb
+++ b/app/views/admin/customers/edit.html.erb
@@ -7,6 +7,7 @@
     <%= form_with model: @customer, url: admin_customer_path do |f| %> 
      <div class="form-group">
        <label for="customer_id"></label>
+       
        <table>
          <tr>
           <th>会員ID</th>
@@ -45,7 +46,7 @@
         </tr>
         <tr>
           <th>会員ステータス</th>
-          <th><%= f.select :.is_deleted., %></th>
+          <th><%= @customer.is_deleted %></th>
           <th></th>
         </tr>
        </table>
