--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -27,6 +27,9 @@
         </div>
     </div>
     <div class="d-flex justify-content-center">
-     <%= link_to "カートに入れる", cart_items_path, class: 'btn btn-sm btn-success' %>
+      <%= form_with model: @cart_item do |f| %>
+      <%= f.select :item_id, [['いち',1], ['に',2], ['さん',3]] %>
+      <%= f.submit "カートに入れる", class: 'btn btn-sm btn-success' %>
+      <% end %>
     </div>
-</div>
+</div
