--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -27,8 +27,9 @@
         </div>
     </div>
     <div class="d-flex justify-content-center">
-      <%= form_with model: @cart_item do |f| %>
-      <%= f.select :item_id, [['いち',1], ['に',2], ['さん',3]] %>
+      <%= form_with model: @cart_item, url: cart_items_path do |f| %>
+      <%= f.hidden_field :item_id, value: @item.id %>
+      <%= f.select :amount, [['いち',1], ['に',2], ['さん',3]] %>
       <%= f.submit "カートに入れる", class: 'btn btn-sm btn-success' %>
       <% end %>
     </div>
