--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,9 +1,9 @@
 <div class="container px-5 px-sm-0">
   <div class="main-container">
-<p>ようこそ、ながのCAKEへ！<br>
+<p1>ようこそ、ながのCAKEへ！<br>
    このサイトは、ケーキ販売のECサイトになります<br>
    会員でない方も商品の閲覧はできますが、<br>
-   購入には会員登録が必要になります。</p><br>
+   購入には会員登録が必要になります。</p1><br>
  </div>
 <h2>新着商品</h2>
    <div class="row">
