--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
            <div class="collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav ml-auto">
               <% if customer_signed_in? %>
-              <%#= current_customer.name %>
+              <li class="nav-item text-light">
+                  ようこそ<%= current_customer.last_name %>さん！
+              </li>
               <li class="nav-item">
                 <%= link_to my_page_path, class: 'nav-link text-light' do %>
                   マイページ
