--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -5,11 +5,11 @@
         <div class="col-6">
         <h3>会員情報編集</h3>
         </div>
-        <div class="col-md-8 col-md-offset-2">
+        <div class="col-md-10 col-md-offset-2">
         <%= form_with model: @customer, url: my_page_path do |f| %> 
         <div class="form-group">
         <label for="customer_id"></label>
-        <table class="col-10">
+        <table class="col-12">
          <tbody>
           <tr>          
               <th>会員ID</th>
@@ -55,8 +55,16 @@
          </table>
       </div>
         <% end %>
-      <div class="text-center">
-      <%= link_to "変更を保存", my_page_path, class: 'btn btn-sm btn-success' %>
+        <div class="text_field">
+        <table class="col-12">
+          <tr>
+            <th style="padding-right: 5em"></th>
+            <th><%= link_to "変更を保存", my_page_path, class: 'btn btn-sm btn-success' %></th>
+            <th><%= link_to "退会する", customers_unsubscribe_path, method: :delete,class: "btn btn-sm btn-danger" %></th>
+          </tr>
+        </table>
+        </div>
+        </div>
       </div>
     </div>
   </div>
