--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"></p>
 <div class="container px-5 px-sm-0">
 <h4>注文情報入力</h4>
-<%= form_with model: @order, url: "/orders/confirm", method: :post, local: true do |f| %>  
+<%= form_with model: @order, url: orders_confirm_path, method: :post, local: true do |f| %>  
 　<h5>支払方法</h5>
 　<%= f.radio_button :payment_way, "credit_card" %>
 　<%= f.label :payment_way_credit_card, "クレジットカード" %><br>
@@ -14,12 +14,12 @@
         <%= current_customer.address %><br>　<%#住所%>
         <%= current_customer.last_name %><%= current_customer.first_name %>　<%#名前%>
    <br>  
-<% end %>
 </div>
 <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="col-6">
-       <%= link_to "確認画面へ進む",  orders_confirm_path, class: 'btn btn-sm btn-primary ml-4' %>
+       <%= f.submit "確認画面へ進む", class: 'btn btn-sm btn-primary ml-4' %>
     </div>
   </div>
+  <% end %>
 </div>
