--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -4,7 +4,7 @@
    <div class="row">
     <% @items.each do |item| %>
     <div class="col-md-3">
-      <%= link_to image_tag item.get_image(100,100) %><br>
+      <%= image_tag item.get_image(100,100) %><br>
       <%= link_to item.name,item_path(item.id) %><br>
       ￥<%= (item.price * 1.1).floor %><br>
     </div>
