--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -8,7 +8,7 @@
       </div>
   <table class="table col-10 table-bordered">
     <tbody>
-      <tr>
+      <tr class="table-secondary">
         <th>商品名</th>
         <th>単価(税込)</th>
         <th>数量</th>
