--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -11,7 +11,7 @@
    <br>
      〒<%= current_customer.postal_code %> <%# 郵便番号 %>
         <%= current_customer.address %><br> <%#住所%>
-        <%= current_customer.last_name %><%= current_customer.first_name  <%#名前%>
+        <%= current_customer.last_name %><%= current_customer.first_name %> <%#名前%>
    <br>  
 
 <div class="container mt-4">
