--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -9,8 +9,8 @@
     <table>
      <tr>
        <th>名前</th>
-       <th>(姓)　<%= f.text_field :last_name, autofocus:true, autocomplete: "last_name" %></th>
-       <th>(名)　<%= f.text_field :first_name %></th>
+       <th>(姓)&emsp;<%= f.text_field :last_name, autofocus:true, autocomplete: "last_name" %></th>
+       <th>(名)&emsp;<%= f.text_field :first_name %></th>
        <th></th>
      </tr>
      <tr>
